fixed logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,12 @@ nav {
         /*float: inherit;*/
         width: 100%;
         margin-right: 0 !important;
+        margin-left: 0 !important;
+        text-align: center;
+    }
+
+    #headerWrapper {
+        margin-left: 0 !important;
         text-align: center;
     }
 
